--- a/index.html
+++ b/index.html
@@ -322,79 +322,232 @@
                 <div class="portfolio_works">
                     <ul class="portfolio_list">
                         <li class="portfolio_item">
-                            <a
-                                target="_blank"
-                                href="https://olegsubotin.github.io/s-js-projects/"
+                            <img src="./images/web-studio.jpg" alt="web-studio cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
                                 >
-                                <img
-                                    class="portfolio_image"
-                                    src="./images/projects.jpg"
-                                    alt="10 most popular projects"
-                                    width="200"
-                                    height="120"
-                                    />
-                                <h4 class="portfolio_item-text">Popular apps</h4>
-                            </a>
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Web Studio landing page
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, SASS, JavaScript
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://olegsubotin.github.io/goit-markup-hw-08/">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/OlegSubotin/goit-markup-hw-08">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="portfolio_item portfolio_item-reverse">
+                            <img src="./images/cleanti.jpg" alt="Cleanti company cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
+                                >
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Cleanti company website
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, CSS3, JavaScript
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://olegsubotin.github.io/cleanti/">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/OlegSubotin/cleanti">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="portfolio_item">
-                            <a
-                                target="_blank"
-                                href="https://olegsubotin.github.io/goit-markup-hw-08/"
+                            <img src="./images/sparkle-studio.jpg" alt="Sparkle Studio cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
                                 >
-                                <img
-                                    class="portfolio_image"
-                                    src="./images/web-studio.jpg"
-                                    alt="Web Studio site"
-                                    width="200"
-                                    height="120"
-                                    />
-                                <h4 class="portfolio_item-text">Web Studio site</h4>
-                            </a>
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Sparkle Studio company website
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, CSS3, JavaScript
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://olegsubotin.github.io/ss/#ua">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/OlegSubotin/ss">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="portfolio_item portfolio_item-reverse">
+                            <img src="./images/phonebook.jpg" alt="Phone Book application cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
+                                >
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Phone Book application
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, CSS3, React, Redux
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://olegsubotin.github.io/goit-react-hw-08-phonebook/">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/OlegSubotin/goit-react-hw-08-phonebook">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="portfolio_item">
-                            <a
-                                target="_blank"
-                                href="https://pozniak17.github.io/team-project-IceCreame/"
+                            <img src="./images/ice-cream.jpg" alt="Ice Cream cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
                                 >
-                                <img
-                                    class="portfolio_image"
-                                    src="./images/ice-cream.jpg"
-                                    alt="Ice Cream site"
-                                    width="200"
-                                    height="120"
-                                    />
-                                <h4 class="portfolio_item-text">Ice Cream site</h4>
-                            </a>
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Ice Cream company landing page
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, SASS, JavaScript
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://pozniak17.github.io/team-project-IceCreame/">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/Pozniak17/team-project-IceCreame">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
-                        <li class="portfolio_item">
-                            <a
-                                target="_blank"
-                                href="https://mykhailokutsyi.github.io/Filmoteka/"
+                        <li class="portfolio_item portfolio_item-reverse">
+                            <img src="./images/films.jpg" alt="Films resource cover image"
+                                width="200"
+                                height="150"
+                                class="portfolio_item-image"
                                 >
-                                <img
-                                    class="portfolio_image"
-                                    src="./images/films.jpg"
-                                    alt="Movies site"
-                                    width="200"
-                                    height="120"
-                                    />
-                                <h4 class="portfolio_item-text">Movies site</h4>
-                            </a>
-                        </li>
-                        <li class="portfolio_item">
-                            <a
-                                target="_blank"
-                                href="https://olegsubotin.github.io/s-markup-cleanti/"
-                                >
-                                <img
-                                    class="portfolio_image"
-                                    src="./images/cleanti.jpg"
-                                    alt="Dry cleaning site"
-                                    width="200"
-                                    height="120"
-                                    />
-                                <h4 class="portfolio_item-text">Dry cleaning site</h4>
-                            </a>
+                            <div class="portfolio-item-description">
+                                <h3 class="portfolio_item-title">
+                                    Films resource
+                                </h3>
+                                <p class="portfolio_item-stack">
+                                    Technologies used: 
+                                    <span class="portfolio_item-stack-tech">
+                                    HTML5, SASS, JavaScript
+                                    </span>
+                                </p>
+                                <ul class="portfolio_item-description-list">
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://mykhailokutsyi.github.io/Filmoteka/">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-circle-right"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="portfolio_item-description-item">
+                                        <a class="portfolio_item-description-link" 
+                                            target="_blank" 
+                                            href="https://github.com/MykhailoKutsyi/Filmoteka">
+                                            <svg width="36" height="36" style="fill: white; margin-right: 10px">
+                                                <use href="./images/sprite.svg#icon-github"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                     <button style="margin: 30px auto" class="download-btn">
